# nanortc

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
.claude/skills/esp-idf-dev/: SKILL.md
.claude/skills/git-push/: SKILL.md
.github/workflows/: ci.yml  esp-idf.yml
benchmarks/: CMakeLists.txt  bench_common.h  bench_concurrent.c  bench_connect.c  bench_dc_latency.c  bench_dc_throughput.c  bench_rtp.c  bench_srtp.c
benchmarks/scripts/: compare_sizes.sh
cmake/: FindMbedTLS.cmake
crypto/: nano_crypto.h  nano_crypto_mbedtls.c  nano_crypto_openssl.c  nanortc_crypto.h  nanortc_crypto_mbedtls.c  nanortc_crypto_openssl.c
docs/: BENCHMARK.md  PLANS.md  QUALITY_SCORE.md  rfc-compliance-checklist.md
docs/design-docs/: core-beliefs.md  index.md  nanortc-design-draft.md
docs/engineering/: architecture-constraints.md  coding-standards.md  development-workflow.md  ice-rfc-compliance.md  memory-profiles.md  safe-c-guidelines.md  turn-rfc-compliance.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: phase1-datachannel.md  phase10-design-convergence.md  phase2-audio.md  phase3-5-h265.md  phase3-video.md  phase4-quality.md  phase5-network-traversal.md  phase8-continued-optimization.md  phase9-bwe-perception.md
docs/exec-plans/completed/: phase0-skeleton.md  (+4 more)
docs/guide-docs/: build.md  index.md
docs/references/: rfc-index.md
examples/: CMakeLists.txt
examples/browser_interop/: CMakeLists.txt  README.md  http_signaling.c  http_signaling.h  index.html  main.c  signaling_server.py
examples/common/: bwe_coordinator.c  bwe_coordinator.h  cli_helpers.h  h264_utils.h  ice_server_resolve.c  ice_server_resolve.h  media_pacer.h  media_source.h  media_source_embed.c  media_source_file.c  multi_session.c  multi_session.h  run_loop.h  run_loop_esp.c  run_loop_linux.c  run_loop_session.c  sig_discovery.c  sig_discovery.h  signaling.h  signaling_stdin.c  webserver.h  webserver_esp.c
examples/esp32_audio/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp32_audio/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  index.html  main.c  music_gen.c  music_gen.h
examples/esp32_camera/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/esp32_camera/boards/esp32_p4_nano/: board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board
examples/esp32_camera/main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  encoder.c  encoder.h  idf_component.yml  index.html  main.c  microphone.c  microphone.h
examples/esp32_datachannel/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32_datachannel/main/: CMakeLists.txt  Kconfig.projbuild  index.html  main.c  udp_discovery.c  udp_discovery.h
examples/esp32_video/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp32_video/main/: CMakeLists.txt  Kconfig.projbuild  index.html  main.c
examples/linux_datachannel/: CMakeLists.txt  main.c
examples/linux_media_send/: CMakeLists.txt  main.c
examples/macos_camera/: CMakeLists.txt  README.md  av_capture.h  av_capture.m  main.m  nanortc_app_config.h  vt_encoder.h  vt_encoder.m
examples/rk3588_uvc_camera/: CMakeLists.txt  README.md  audio_capture.h  audio_capture_alsa.c  capture.h  capture_ffmpeg.c  capture_gstreamer.c  frame_queue.c  frame_queue.h  index.html  main.c  media_pipeline.c  media_pipeline.h  media_queue.c  media_queue.h  nanortc_app_config.h  session.c  session.h  sig_queue.c  sig_queue.h
examples/tools/: CMakeLists.txt  opus_gen_tone.c  opus_verify.c  pack_frames.py  turn_allocate.c
include/: nanortc.h  nanortc_config.h  nanortc_util.h
scripts/: ci-check.sh  coverage.sh  measure-sizes.sh  run-fuzz.sh  start-test-turn.sh  stop-test-turn.sh
scripts/esp32-measure/: CMakeLists.txt  sdkconfig.defaults
scripts/esp32-measure/main/: CMakeLists.txt  main.c
src/: nano_addr.c  nano_addr.h  nano_annex_b.c  nano_annex_b.h  nano_base64.c  nano_base64.h  nano_bwe.c  nano_bwe.h  nano_crc32.c  nano_crc32.h  nano_crc32c.c  nano_crc32c.h  nano_datachannel.c  nano_datachannel.h  nano_dtls.c  nano_dtls.h  nano_h264.c  nano_h264.h  nano_h265.c  nano_h265.h  nano_ice.c  nano_ice.h  nano_jitter.c  nano_jitter.h  nano_log.c  nano_log.h  nano_media.c  nano_media.h  nano_negotiate.c  nano_rtc.c  nano_rtc_internal.h  nano_rtc_media.c  nano_rtcp.c  nano_rtcp.h  nano_rtp.c  nano_rtp.h  nano_sctp.c  nano_sctp.h  nano_sdp.c  nano_sdp.h  (+8 more)
tests/: CMakeLists.txt  iot_profile.h  nano_test.h  nano_test_config.h  test_addr.c  test_annex_b.c  test_base64.c  test_bwe.c  test_crc32.c  test_datachannel.c  test_dtls.c  test_e2e.c  test_h264.c  test_h265.c  test_ice.c  test_jitter.c  test_main.c  test_media.c  test_next_timeout.c  test_output_lifetime.c  test_rtcp.c  test_rtp.c  test_sctp.c  test_sdp.c  test_sizeof.c  test_srtp.c  test_stun.c  test_trickle_ice.c  test_turn.c  test_twcc.c
tests/esp32/: test_esp32_dc.py
tests/fuzz/: CMakeLists.txt  fuzz_addr.c  fuzz_bwe.c  fuzz_h264.c  fuzz_h265.c  fuzz_rtp.c  fuzz_sctp.c  fuzz_sdp.c  fuzz_stun.c  fuzz_turn.c
tests/fuzz/corpus/: .gitignore
tests/fuzz/corpus/sdp/: chrome_audio.sdp  minimal.sdp
tests/interop/: CMakeLists.txt  interop_common.c  interop_common.h  interop_fake_stun.c  interop_fake_stun.h  interop_libdatachannel_media_peer.c  interop_libdatachannel_media_peer.h  interop_libdatachannel_peer.c  interop_libdatachannel_peer.h  interop_libdc_peer.c  interop_libdc_peer.h  interop_nanortc_media_peer.c  interop_nanortc_media_peer.h  interop_nanortc_peer.c  interop_nanortc_peer.h  test_interop_audio.c  test_interop_dc.c  test_interop_srflx.c  test_interop_turn.c  test_interop_turn_relay.c  test_interop_turn_relay_nanortc.c  test_interop_video.c
tests/interop/py/: CMakeLists.txt  conftest.py  nanortc_peer_cli.c  protocol.md  requirements.txt  test_datachannel.py
tests/interop/py/harness/: __init__.py  nanortc_peer.py  signaling.py
tests/interop/turn-server/: docker-compose.yml  turnserver.conf
(+3 files in other folders)
